removed hardcoded stuff in client side js.

--- a/client-side/index.html
+++ b/client-side/index.html
@@ -94,6 +94,10 @@
 		<script src="/client-side/js/bootstrap.min.js"></script>
 		<script src="/client-side/js/jquery.raty.min.js"></script>
         <script type="text/javascript" src="/node_modules/socket.io/node_modules/socket.io-client/dist/socket.io.js"></script>
+        <script>
+        var max_entries = {{max_entries}};
+        var url = '{{url}}';
+        </script>
 		<script type="text/javascript" src="/client-side/functions.js"></script>
 	</body>
 </html>
