--- a/client-side/index.html
+++ b/client-side/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Voyager: Babble Public Chatrooms</title>
+		<title>Babble Stream</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway">
 		<link href="/client-side/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
-		<style> body { font-family: 'Raleway', sans-serif; padding-top: 90px; background-image: url("http://1.bp.blogspot.com/-wynSnYQEIPs/UYxWFdz9aDI/AAAAAAAABU0/PKR39vraoYE/s1600/shynD+Stripe+Pattern+Wallpaper+-+Blue+2.jpg"); background-repeat:repeat;} 
+		<style> body { font-family: 'Raleway', sans-serif; padding-top: 90px; background-image: url("http://1.bp.blogspot.com/-wynSnYQEIPs/UYxWFdz9aDI/AAAAAAAABU0/PKR39vraoYE/s1600/shynD+Stripe+Pattern+Wallpaper+-+Blue+2.jpg"); background-repeat:no-repeat; background-position:center;} 
 				.image { max-width: 250px; max-height: 315px; }
 				.thumbnail { border: 0 none; box-shadow: none; }
 				.dp {width: 40px; height: 40px;}
@@ -72,7 +72,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="brand"><img class="dp" src="/client-side/artifacts/intro_group.png">Babble Stream</a>
+					<a class="brand"><img class="dp" src="/client-side/artifacts/intro_group.png">Babble Stream by Voyager Innovations, Inc</a>
 					<span class="tagline pull-right">Keep Talking</span>
 				</div>
 			</div>
