updated html file

--- a/client-side/index.html
+++ b/client-side/index.html
@@ -8,7 +8,7 @@
 		<style> body { font-family: 'Raleway', sans-serif; padding-top: 90px; background-image: url("http://1.bp.blogspot.com/-wynSnYQEIPs/UYxWFdz9aDI/AAAAAAAABU0/PKR39vraoYE/s1600/shynD+Stripe+Pattern+Wallpaper+-+Blue+2.jpg"); background-repeat:no-repeat; background-position:center;} 
 				.image { max-width: 250px; max-height: 315px; }
 				.thumbnail { border: 0 none; box-shadow: none; }
-				.dp {width: 40px; height: 40px;}
+				.dp {width: 12%; height: 12%;}
 				.chatroom {width: 50px; height: 50px;}
 				.profpic {width: 50px; height: 50px; border: 3px solid white; box-shadow: 0 0 5px #333;}
 				.brand {font-size: 50px;}
@@ -72,7 +72,8 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="brand"><img class="dp" src="/client-side/artifacts/intro_group.png">Babble Stream by Voyager Innovations, Inc</a>
+					<a class="brand"><img class="dp" src="/client-side/artifacts/miscs/logo_babble.png">
+                         Stream by Voyager Innovations, Inc</a>
 					<span class="tagline pull-right">Keep Talking</span>
 				</div>
 			</div>
