filtering bad words now case insensitive. resized webpage's navbar.

--- a/client-side/index.html
+++ b/client-side/index.html
@@ -16,9 +16,10 @@
                 } 
 				.image { max-width: 250px; max-height: 315px; }
 				.thumbnail { border: 0 none; box-shadow: none; }
-                .navbar { background:transparent; opacity:0.4; filter:alpha(opacity=40); }
-				.dp { width: 40%; height: 40%; }
-                .img_logo { width: 20%; height: 20%; }
+                .navbar { background:transparent; opacity:0.7; filter:alpha(opacity=70); }
+				.dp { width: 60%; height: 60%; }
+                .img_logo { width: 30%; height: 30%; }
+                #txt_tag { font-size: 30px; margin-top: 5%;}
                 .chatroom { width: 50px; height: 50px;}
 				.profpic { width: 50px; height: 50px; }
 				.brand { font-size: 50px;}
@@ -86,7 +87,7 @@
                         <img class='dp' src='/client-side/artifacts/main/bstream_logo.png' />
                     </a>
 					<span class='tagline pull-right'>
-                        <text class='pull-right'>   Keep Talking</text>
+                        <text id='txt_tag' class='pull-right'>   Keep Talking</text>
                         <img class='img_logo pull-right' src='/client-side/artifacts/main/settings_main.png' />
                     </span>
 				</div>
